--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="conteiner">
         <button type="button" class="head-btn-open js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg class="head-open" width="32" height="22">
-                <use href="./images/open.svg#open"></use>
+                <use href="./images/symbol-defs.svg#open"></use>
             </svg>
         </button>
         <div class="head-flex">
