--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <nav class="nav-flex">
                 <a class="logo" href="./index.html">Web<span class="logo-second">Studio</span></a>
                 <button type="button" class="head-btn-open js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                    <svg class="head-open" width="32" height="22">
-                        <use href="./images/symbol-defs.svg#open"></use>
-                    </svg>
+                    <span class="close"></span>
+                    <span class="close"></span>
+                    <span class="close"></span>
                 </button>
                 <div class="menu-container js-menu-container" id="mobile-menu">
                     <button class="head-btn-close js-close-menu">
