--- a/index.html
+++ b/index.html
@@ -453,7 +453,9 @@
             <div class="ftr-content">
 
                 <div class="ftr-flex">
+                    <span class="ftr-logo">
                     <a class="logo" href="./index.html">Web<span class="logo-second">Studio</span></a>
+                    </span>
                     <p class="ftr-text">Increase the flow of customers and sales for your business with digital
                         marketing &
                         growth
@@ -508,11 +510,13 @@
                             <label>
                                 <input class="ftr-input of-out" type="email" name="email" placeholder="E-mail">
                             </label>
+                            <div class="ftr-btn-flex">
                             <div class="ftr-form-btn-conteiner">
                                 <button class="ftr-form-btn" type="submit">Subscribe</button>
                                 <svg class="ftr-form-svg" width="24" height="20">
                                     <use href="./images/form.svg#send"></use>
                                 </svg>
+                            </div>
                             </div>
                         </div>
                     </form>
