--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                             <a class="head-navigation-list-link" href="">Contacts</a>
                         </li>
                     </ul>
+                    <div class="contact-conteiner">
                     <address class="contacts">
                         <ul class="contacts-list">
                             <li class="contacts-mail">
@@ -125,6 +126,7 @@
                             </li>
                         </ul>
                     </address>
+                    </div>
                     <div class="head-svg">
                         <ul class="head-svg-cnt">
                             
