--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
                 <h2 class="product-header">What are we doing</h2>
                 <ul class="product-list">
                     <li>
-                        <img class="product-content-img" src="./images/img1.jpg" alt="Portfolio" width="360"
+                        <img srcset="./images/produkt-1-2x.jpg 2x" class="product-content-img" src="./images/img1.jpg" alt="Portfolio" width="360"
                             height="300">
                     </li>
                     <li>
-                        <img class="product-content-img" src="./images/img2.jpg" alt="Message" width="360" height="300">
+                        <img srcset="./images/produkt-2-2x.jpg 2x" class="product-content-img" src="./images/img2.jpg" alt="Message" width="360" height="300">
                     </li>
                     <li>
-                        <img class="product-content-img" src="./images/img3.jpg" alt="Article" width="360" height="300">
+                        <img srcset="./images/produkt-3-2x.jpg 2x" class="product-content-img" src="./images/img3.jpg" alt="Article" width="360" height="300">
                     </li>
                 </ul>
             </div>
@@ -263,7 +263,7 @@
                 <h2 class="teamcart-header">Our Team</h2>
                 <ul class="teamcart-list">
                     <li class="teamcart-content">
-                        <img class="teamcart-content-img" src="./images/img4.jpg" alt="Mark Guerrero" width="264"
+                        <img srcset="./images/teamcart/teamcart-desc-1-2x.jpg 2x" class="teamcart-content-img" src="./images/img4.jpg" alt="Mark Guerrero" width="264"
                             height="260">
                         <h3 class="teamcart-content-subtitle">Mark Guerrero</h3>
                         <p class="teamcart-content-text">Product Designer</p>
@@ -305,7 +305,7 @@
                         </ul>
                     </li>
                     <li class="teamcart-content">
-                        <img class="teamcart-content-img" src="./images/img5.jpg" alt="Tom Ford" width="264"
+                        <img srcset="./images/teamcart/teamcart-desc-2-2x.jpg 2x" class="teamcart-content-img" src="./images/img5.jpg" alt="Tom Ford" width="264"
                             height="260">
                         <h3 class="teamcart-content-subtitle">Tom Ford</h3>
                         <p class="teamcart-content-text">Frontend Developer</p>
@@ -349,7 +349,7 @@
                         </ul>
                     </li>
                     <li class="teamcart-content">
-                        <img class="teamcart-content-img" src="./images/img6.jpg" alt="Camila Garcia" width="264"
+                        <img srcset="./images/teamcart/teamcart-desc-3-2x.jpg 2x" class="teamcart-content-img" src="./images/img6.jpg" alt="Camila Garcia" width="264"
                             height="260">
                         <h3 class="teamcart-content-subtitle">Camila Garcia</h3>
                         <p class="teamcart-content-text">Marketing</p>
@@ -393,7 +393,7 @@
                         </ul>
                     </li>
                     <li class="teamcart-content">
-                        <img class="teamcart-content-img" src="./images/img7.jpg" alt="Daniel Wilson" width="264"
+                        <img srcset="./images/teamcart/teamcart-desc-4-2x.jpg 2x" class="teamcart-content-img" src="./images/img7.jpg" alt="Daniel Wilson" width="264"
                             height="260">
                         <h3 class="teamcart-content-subtitle">Daniel Wilson</h3>
                         <p class="teamcart-content-text">UI Designer</p>
