--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
                     <li class="content-list-item">
                         <a href="" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (7).jpg" alt="App" width="360" height="300" class="content-img">
+                                <img srcset="./images/portfolio/portfolio-tel-1-2x.jpg 2x" src="./images/img (7).jpg" alt="App" width="360" height="300" class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
                                         Manager App · Calorie
@@ -164,7 +164,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (8).jpg" alt="Marketing" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-2-2x.jpg 2x" src="./images/img (8).jpg" alt="Marketing" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -182,7 +182,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (9).jpg" alt="App" width="360" height="300" class="content-img">
+                                <img srcset="./images/portfolio/portfolio-tel-3-2x.jpg 2x" src="./images/img (9).jpg" alt="App" width="360" height="300" class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
                                         Manager App · Calorie
@@ -199,7 +199,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (10).jpg" alt="Marketing" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-4-2x.jpg 2x" src="./images/img (10).jpg" alt="Marketing" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -217,7 +217,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (11).jpg" alt="Design" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-5-2x.jpg 2x" src="./images/img (11).jpg" alt="Design" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -235,7 +235,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (13).jpg" alt="Marketing" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-6-2x.jpg 2x" src="./images/img (13).jpg" alt="Marketing" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -253,7 +253,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (14).jpg" alt="Design" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-7-2x.jpg 2x" src="./images/img (14).jpg" alt="Design" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -271,7 +271,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (15).jpg" alt="Web Site" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-8-2x.jpg 2x" src="./images/img (15).jpg" alt="Web Site" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
@@ -289,7 +289,7 @@
                     <li class="content-list-item">
                         <a href="#" class="content-list-element">
                             <div class="content-list-bg">
-                                <img src="./images/img (16).jpg" alt="Web Site" width="360" height="300"
+                                <img srcset="./images/portfolio/portfolio-tel-9-2x.jpg 2x" src="./images/img (16).jpg" alt="Web Site" width="360" height="300"
                                     class="content-img">
                                 <div class="content-overley">
                                     <p class="content-bg-text">14 Stylish and User-Friendly App Design Concepts · Task
